gsn+pl: Add lifted rel decorators part 3
 * Instantiation base case